Most stuff is working

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DatapointContext": "data source=WIN10PRO-201905;initial catalog=WeatherApp;trusted_connection=true;MultipleActiveResultSets=true"
+  }
 }
